syntax = "proto3";

option csharp_namespace = "Northwind.Grpc.Client.Mvc";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

package employee;

service Employee {
  rpc GetEmployee (EmployeeRequest) returns (EmployeeReply);
  rpc GetEmployees (EmployeesRequest) returns (EmployeesReply);
}

message EmployeeRequest {
  int32 employee_id = 1;
}

message EmployeesRequest {
}

message EmployeeReply {
  int32 employee_id = 1;
  string last_name = 2;
  string first_name = 3;
  string title = 4;
  string title_of_courtesy = 5;
  google.protobuf.Timestamp birth_date = 6;
  google.protobuf.Timestamp hire_date = 7;
  string address = 8;
  string city = 9;
  string region = 10;
  string postal_code = 11;
  string country = 12;
  string home_phone = 13;
  string extension = 14;
  bytes photo = 15;
  string notes = 16;
  int32 reports_to = 17;
  string photo_path = 18;
}

message EmployeesReply {
  repeated EmployeeReply employees = 1;
}
